nginx-static/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nginx-ingress-daemonset
  namespace: ingress-nginx
spec:
  selector:
    matchLabels:
      app: nginx-ingress
  template:
    metadata:
      labels:
        app: nginx-ingress
    spec:
      serviceAccountName: nginx-ingress-serviceaccount
      containers:
      - name: nginx-ingress
        image: k8s.gcr.io/ingress-nginx/controller:v1.2.0@sha256:b5a16a2...
        args:
          - /nginx-ingress-controller
          - --configmap=$(POD_NAMESPACE)/nginx-ingress-configmap
          - --publish-service=ingress-nginx/my-nginx-ingress-controller
          - --watch-namespace=
        ports:
        - containerPort: 80
        livenessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 80
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 80
          timeoutSeconds: 1
        resources:
          requests:
            cpu: 100m
            memory: 90Mi
        securityContext:
          allowPrivilegeEscalation: true
          capabilities:
            drop:
              - ALL
            add:
              - NET_BIND_SERVICE
          runAsUser: 33
          runAsNonRoot: true
