nginx-static/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-static
spec:
  selector:
    app: nginx-static
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
